--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Conexao": "Data Source=(localdb)\\MSSQLLocalDB;database=AchadosePerdidos;Initial Catalog=master;Encrypt=False;Trust Server Certificate=False"
+  },
   "AllowedHosts": "*"
 }
