Criando a model e o service do Usuario

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Conexao": "Data Source=(localdb)\\MSSQLLocalDB;database=AchadosePerdidos;Initial Catalog=master;Encrypt=False;Trust Server Certificate=False"
+    "Conexao": "Data Source=(localdb)\\MSSQLLocalDB;database=AchadosePerdidos;Encrypt=False;Trust Server Certificate=False"
   },
   "AllowedHosts": "*"
 }
